--- a/CertificateManagementSystem/Views/EducationalInstitution/Details.cshtml
+++ b/CertificateManagementSystem/Views/EducationalInstitution/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>EducationalInstitution</h4>
+    <h4>Tổ chức giáo dục</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
