--- a/CertificateManagementSystem/Views/Certificate/Create.cshtml
+++ b/CertificateManagementSystem/Views/Certificate/Create.cshtml
@@ -19,12 +19,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="CitizenId" class="control-label"></label>
-                <select asp-for="CitizenId" class ="form-control" asp-items="ViewBag.CitizenId"></select>
+                <select asp-for="CitizenId" class="form-control" asp-items="ViewBag.CitizenId">
+                    <option value="">-- Select Citizen --</option>
+                </select>
+                <span asp-validation-for="CitizenId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CertificateTypeId" class="control-label"></label> 
-                <select asp-for="CertificateTypeId" class ="form-control" asp-items="ViewBag.CertificateTypeId"></select>
+                <label asp-for="CertificateTypeId" class="control-label"></label>
+                <select asp-for="CertificateTypeId" class="form-control" asp-items="ViewBag.CertificateTypeId">
+                </select>
+                <span asp-validation-for="CertificateTypeId" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="IssuingInstitutionId" class="control-label"></label>
                 <select asp-for="IssuingInstitutionId" class ="form-control" asp-items="ViewBag.IssuingInstitutionId"></select>
