--- a/CertificateManagementSystem/Views/CertificateRequest/Index.cshtml
+++ b/CertificateManagementSystem/Views/CertificateRequest/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Yêu cầu</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -33,9 +33,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.CertificateType)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Processor)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -62,9 +59,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CertificateType.CertificateTypeId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Processor.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.RequestId">Edit</a> |
