--- a/CertificateManagementSystem/Views/CertificateVerification/Details.cshtml
+++ b/CertificateManagementSystem/Views/CertificateVerification/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Xác minh chứng chỉ</h1>
 
 <div>
     <h4>CertificateVerification</h4>
