--- a/CertificateManagementSystem/Views/EducationalInstitution/Create.cshtml
+++ b/CertificateManagementSystem/Views/EducationalInstitution/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>EducationalInstitution</h4>
+<h4>Tổ chức giáo dục</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
