--- a/CertificateManagementSystem/Views/SystemConfiguration/Delete.cshtml
+++ b/CertificateManagementSystem/Views/SystemConfiguration/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Cài đặt</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.UpdatedDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.UpdatedByUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+            @Html.DisplayFor(model => model.UpdatedByUser.Id)
         </dd>
     </dl>
     
