--- a/CertificateManagementSystem/Views/SystemConfiguration/Details.cshtml
+++ b/CertificateManagementSystem/Views/SystemConfiguration/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Cài đặt</h1>
 
 <div>
     <h4>SystemConfiguration</h4>
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.UpdatedDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.UpdatedByUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+            @Html.DisplayFor(model => model.UpdatedByUser.Id)
         </dd>
     </dl>
 </div>
