--- a/CertificateManagementSystem/Views/SystemConfiguration/Index.cshtml
+++ b/CertificateManagementSystem/Views/SystemConfiguration/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Cài đặt</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.UpdatedDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.User)
+                @Html.DisplayNameFor(model => model.UpdatedByUser)
             </th>
             <th></th>
         </tr>
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.UpdatedDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
+                @Html.DisplayFor(modelItem => item.UpdatedByUser.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ConfigId">Edit</a> |
